tempfile/impl-trait-for-tuples/tests/ui/no_type_parameter.rs
#[impl_trait_for_tuples::impl_for_tuples(1)]
trait Test {
	type Test;
}

fn main() {}
